--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -1,3 +1,39 @@
+#experience-page {
+  text-align: center;
+  padding: 20px;
+}
+
 h2 {
   margin-right: 50px;
+}
+
+.job-details li {
+  margin: 5px 0;
+}
+
+@media (max-width: 768px) {
+  #experience-page {
+    padding: 10px;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
+
+  .job {
+    margin-bottom: 10px;
+  }
+
+  h2 {
+    font-size: 18px;
+    margin-bottom: 3px;
+  }
+
+  h3 {
+    font-size: 14px;
+  }
+
+  .job-details li {
+    margin: 3px 0;
+  }
 }
